--- a/lecture_notes/notes_30-10-2020.md
+++ b/lecture_notes/notes_30-10-2020.md
@@ -22,6 +22,13 @@ Kto nestihol minulý týždeň: poprosím o doinštalovanie balíčka `nycflight
 
 
 
+### Skončili sme:
+
+1. Doťukať si notebook `dplyr`
+2. Bude domáca úloha.
+
+
+
 
 
 
