--- a/lecture_notes/notes_06-11-2020.md
+++ b/lecture_notes/notes_06-11-2020.md
@@ -8,6 +8,7 @@ Ešte nás čaká jedna prednáška o simulácii, a potom sa dostaneme na koniec
 * Praktická štatistika v R - lineárne modely (ANOVA), viacnásobné porovnania, bežné testy a alternatívy k nim, kontingenčné tabuľky načo používať p-hodnoty a na čo nie atd.
 * Metódy počítačovej štatistiky - simulácie, bootstrap, krížová validácia. Úvod bude na ďalšej prednáške. 
 * Kauzálne metódy - kauzálne modelovanie, ako zisťovať kauzálne vzťahy. 
+* _*Web scraping*_ - ako získavať dáta z (nedátových) Internetových zdrojov
 
 Môžete prísť aj s vašimi témami. 
 
