--- a/lecture_notes/notes_06-11-2020.md
+++ b/lecture_notes/notes_06-11-2020.md
@@ -12,6 +12,8 @@ Ešte nás čaká jedna prednáška o simulácii, a potom sa dostaneme na koniec
 
 Môžete prísť aj s vašimi témami. 
 
+Ešte niečo k oznamom?
+
 #### Repozitár
 
 Aby ste mohli používať najnovšie verzie súborov, vždy na začiatku prednášky si prosím zosynchronizujte repozitár. To napríklad v GitHub Desktope znamená urobiť `Pull origin` alebo  `Fetch origin`.
@@ -35,7 +37,15 @@ Tento týždeň sa vám ich urodilo hneď niekoľko.
 2. `dplyr` : práca s čistými tabuľkami, `code/RTutorial_dplyr.Rmd`: úpravy a sumarizácia tabuliek. To, čo sme začali na konci minulej prednášky, ale nedorobili .
 2. Poučný príklad o dôležitosti dobre si nakresliť dáta.
 
+## Kde sme skončili
 
+Uprostred poučného príkladu
+
+## Nabudúce
+
+1. **Rozprávame sa** o téme na budúce prednášky
+2. **Domáce úlohy**  budú pribúdať aj tento týždeň
+3. **Preberáme**: Simulácie, počítačovo-intenzívne metódy - bootstrap a iné metódy resamplingu.
 
 
 
