Zmeny pred prenáškou

--- a/code/RTutorial_Simulation.Rmd
+++ b/code/RTutorial_Simulation.Rmd
@@ -1,6 +1,9 @@
 ---
 title: "RTutorial: Simulation"
-output: html_notebook
+output: 
+  html_notebook: 
+    highlight: tango
+    theme: paper
 ---
 
 ## Úvod
