--- a/lecture_notes/notes_20-11-2020.md
+++ b/lecture_notes/notes_20-11-2020.md
@@ -22,4 +22,10 @@ Domáca úloha tento týždeň nebola, ale nejaké úlohy si odnesiete hneď z p
 
 Doinštalujte si prosím balíčky `rmarkdown` (mali by ste mať, ale neškodí aktualizovať),  `gtsummary`, `broom` a `survival`. Budeme ich potrebovať pre dnešnú prednášku.
 
+### Dostali sme sa
+
+iba na koniec notebooku so simuláciami, takže bod 2 sa odkladá na budúci týždeň. 
+
+Domáca úloha bude teda zo simulácií.
+
 
